[package]
name = "pumpfun-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.21"
bytes = "1"
dashmap = "5"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
bincode = "1.3"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json"], default-features = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "native-tls"] }
tonic = { version = "0.11", features = ["transport"] }
solana-sdk = "1.18.9"
solana-client = "1.18.9"

